Fix scrollbar appearing when not at 100% zoom (#341)
* fix scrollbar when not at 100% zoom

* take a less nuclear approach to overflow hiding

--- a/src/components/FooterBar/UserInfo.css
+++ b/src/components/FooterBar/UserInfo.css
@@ -19,7 +19,7 @@
 
   @descendent settings {
     position: absolute;
-    bottom: 3px;
+    bottom: 4px;
     right: 3px;
     height: 23px;
     width: 23px;
